--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps,
  [
-  {epgsql,	".*",	{git, "git://github.com/epgsql/epgsql.git",	{branch, "devel"}}},
-  {poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",	{tag, "1.4.2"}}}
+  {epgsql,	".*",	{git, "https://github.com/epgsql/epgsql",	{tag, "4.7.1"}}},
+  {poolboy,	".*",	{git, "https://github.com/devinus/poolboy",	{tag, "1.4.2"}}}
  ]}.
